# doggo-discriminator

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
doggo_discriminator/: __init__.py
doggo_discriminator/core/: __init__.py  models.py
doggo_discriminator/data_sinks/: __init__.py  json_sink.py
doggo_discriminator/data_sources/: ___init__.py  dog_api.py
doggo_discriminator/interfaces/: __init__.py  typer_demo.py
tests/: __init__.py  test_core_models.py  test_doggo_discriminator.py  test_sink_json.py  test_source_dog_api.py
