[tool.poetry]
name = "doggo-discriminator"
version = "0.1.0"
description = "A silly labeling interface for the stanford dog data set"
authors = ["Ali Soliman <atestsoliman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"
requests = "^2.27.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
email-validator = "^1.1.3"
typer = "^0.4.1"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.3.0"
bandit = "^1.7.4"
mypy = "^0.942"
isort = "^5.10.1"
Sphinx = "^4.5.0"
pre-commit = "^2.18.1"
coverage = "^6.3.2"
flake8-bandit = "^3.0.0"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.1"
flake8-bugbear = "^22.3.23"
types-requests = "^2.27.19"
types-Pillow = "^9.0.13"

[tool.poetry.scripts]
dogs = "doggo_discriminator.interfaces.typer_demo:main"

[tool.black]
verbose = true

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.coverage.paths]
source = ["doggo_discriminator/**", "*/site-packages"]
tests = ["tests", "*/tests"]


[tool.coverage.run]
branch = true
source = ["doggo_discriminator", "tests"]
omit = ["doggo_discriminator/interfaces/typer_demo.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100
omit = ["doggo_discriminator/interfaces/typer_demo.py"]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
plugins = ["pydantic.mypy"]
show_column_numbers = true
show_error_codes = true
show_error_context = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
